Fix password validation error message alignment

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -648,6 +648,10 @@ a#menu-toggle:focus {
 
 }
 
+.change-password-form .error-message-container {
+    display: inline-flex;
+}
+
 /******************************************************************/
 /* Media queries                                                  */
 /******************************************************************/
